# integrations

./: .gitignore  README.md
python/arcis-agent-kit/: README.md  pyproject.toml
python/arcis-agent-kit/arcis_agent_kit/: __init__.py  adapters.py  agentkit.py  pydantic_ai.py  spec.py
python/arcis-agent-kit/examples/: agentkit_example.py  autogen_example.py  claude_example.py  crewai_example.py  gemini_example.py  google_adk_example.py  grok_example.py  openai_example.py  pydantic_ai_example.py
python/langchain-arcis/: README.md  pyproject.toml
python/langchain-arcis/arcis_langchain/: __init__.py  client.py  tools.py
python/langchain-arcis/examples/: langgraph_agent.py  treasury_agent.py
runtimes/hermes-arcis/: arcis-treasury.md  install.md
runtimes/openclaw-arcis/: arcis.skill.md  mcp-config.json
skills/arcis-treasury/: README.md  SKILL.md
typescript/eliza-plugin-arcis/: README.md  demo.ts  package.json  treasury-agent.character.json
typescript/eliza-plugin-arcis/src/: index.ts
typescript/game-plugin-arcis/: README.md  package.json
typescript/game-plugin-arcis/examples/: treasury-agent.ts
typescript/game-plugin-arcis/src/: index.ts
typescript/mastra-arcis/: README.md  package.json
typescript/mastra-arcis/src/: index.ts
typescript/vercel-ai-arcis/: README.md  package.json  tsconfig.json
typescript/vercel-ai-arcis/src/: index.ts
